# abbyy_cv

./: .gitignore  README.md
Task1/: .gitignore  CMakeLists.txt  DisplayImage.cpp  ProcessImage  README.md  main.cpp
Task2/: CMakeLists.txt  CheckFilter  MedianFilter  README.md  filters.cpp  graphics.py  main.cpp
Task3/: CMakeLists.txt  README.md  Rotate  graphics.py  main.cpp  rotation.cpp
Task4/: CMakeLists.txt  ProcessImage  generate_images.py  main.cpp
Task5/: README.md  main.py
